# local-mpv

./: Cargo.toml  PKGBUILD  README.md  index.html  local-arch.patch  local-mpv.desktop
src/: main.rs
