[package]
name = "local-mpv"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
arboard = "3.4.0"
clap = { version = "4.5.7", features = ["derive"] }
fast_qr = "0.12.5"
if-addrs = "0.12.0"
libmpv = "2.0.1"
url = "2.5.1"
